docs/2.x/generated/Classnames.md

## API\Request
## Access
## Archive
## ArchiveProcessor
## ArchiveProcessor\Parameters
## AuthResult
## Columns\Dimension
## Common
## Config
## Console
## DataAccess\LogAggregator
## DataTable
## DataTable\BaseFilter
## DataTable\Filter\AddColumnsProcessedMetrics
## DataTable\Filter\AddColumnsProcessedMetricsGoal
## DataTable\Filter\AddSegmentByLabel
## DataTable\Filter\AddSegmentByLabelMapping
## DataTable\Filter\AddSegmentBySegmentValue
## DataTable\Filter\AddSegmentValue
## DataTable\Filter\AddSummaryRow
## DataTable\Filter\BeautifyRangeLabels
## DataTable\Filter\BeautifyTimeRangeLabels
## DataTable\Filter\CalculateEvolutionFilter
## DataTable\Filter\ColumnCallbackAddColumn
## DataTable\Filter\ColumnCallbackAddColumnPercentage
## DataTable\Filter\ColumnCallbackAddColumnQuotient
## DataTable\Filter\ColumnCallbackAddMetadata
## DataTable\Filter\ColumnCallbackDeleteMetadata
## DataTable\Filter\ColumnCallbackDeleteRow
## DataTable\Filter\ColumnCallbackReplace
## DataTable\Filter\ColumnDelete
## DataTable\Filter\ExcludeLowPopulation
## DataTable\Filter\GroupBy
## DataTable\Filter\Limit
## DataTable\Filter\MetadataCallbackAddMetadata
## DataTable\Filter\MetadataCallbackReplace
## DataTable\Filter\Pattern
## DataTable\Filter\PatternRecursive
## DataTable\Filter\PrependSegment
## DataTable\Filter\PrependValueToMetadata
## DataTable\Filter\ReplaceColumnNames
## DataTable\Filter\ReplaceSummaryRowLabel
## DataTable\Filter\Sort
## DataTable\Filter\Truncate
## DataTable\Map
## DataTable\Row
## DataTable\Simple
## Date
## Db
## DbHelper
## Filesystem
## FrontController
## Http
## IP
## Intl\Data\Provider\CurrencyDataProvider
## Intl\Data\Provider\LanguageDataProvider
## Intl\Data\Provider\RegionDataProvider
## Log
## Mail
## Measurable\Measurable
## Menu\MenuAbstract
## Menu\MenuAdmin
## Menu\MenuReporting
## Menu\MenuTop
## Menu\MenuUser
## Metrics
## Metrics\Formatter
## Metrics\Formatter\Html
## NoAccessException
## Nonce
## Notification
## Notification\Manager
## Option
## Period
## Period\Range
## Piwik
## Plugin
## Plugin\API
## Plugin\Archiver
## Plugin\Controller
## Plugin\ControllerAdmin
## Plugin\Dimension\ActionDimension
## Plugin\Dimension\ConversionDimension
## Plugin\Dimension\VisitDimension
## Plugin\Manager
## Plugin\Menu
## Plugin\Metric
## Plugin\ProcessedMetric
## Plugin\Report
## Plugin\Segment
## Plugin\Settings
## Plugin\Tasks
## Plugin\ViewDataTable
## Plugin\Visualization
## Plugin\Widgets
## Plugins\CoreHome\Columns\Metrics\AverageTimeOnSite
## Plugins\CoreHome\Columns\Metrics\EvolutionMetric
## Plugins\CoreVisualizations\Metrics\Formatter\Numeric
## Plugins\Diagnostics\DiagnosticService
## Plugins\Diagnostics\Diagnostic\DiagnosticResult
## Plugins\Diagnostics\Diagnostic\DiagnosticResultItem
## Plugins\Login\SessionInitializer
## Plugins\MobileMessaging\SMSProvider
## Plugins\UsersManager\UserPreferences
## RankingQuery
## Registry
## ScheduledTask
## Scheduler\Schedule\Daily
## Scheduler\Schedule\Hourly
## Scheduler\Schedule\Monthly
## Scheduler\Schedule\Schedule
## Scheduler\Schedule\Weekly
## Scheduler\Scheduler
## Scheduler\Task
## Segment
## SettingsPiwik
## SettingsServer
## Settings\Setting
## Settings\Storage
## Settings\Storage\StaticStorage
## Settings\SystemSetting
## Settings\UserSetting
## Singleton
## Site
## TaskScheduler
## Translation\Translator
## Updates
## Url
## UrlHelper
## Version
## View
## ViewDataTable\Config
## ViewDataTable\Factory
## ViewDataTable\RequestConfig
## View\UIControl
## WidgetsList
